# SimpleAgent

./: Cargo.toml  LICENSE  README.md
src/: agent.rs  main.rs  ollama.rs  tools.rs
